--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "license": "BSD-2-Clause",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zend-modulemanager": ">=2.2"
+        "zendframework/zend-modulemanager": ">=2.2",
+        "zendframework/zend-db": ">=2.2"
     },
     "authors": [
         {
