--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,17 @@
 {
     "name": "ripaclub/sphinxsearch",
     "description": "A Zend Framework 2 module that encapsulates Sphinx Search functionalities.",
-        "license": "BSD-2-Clause",
+    "license": "BSD-2-Clause",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.3",
         "zendframework/zend-modulemanager": ">=2.2",
         "zendframework/zend-db": ">=2.2",
         "zendframework/zend-servicemanager": ">=2.2"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "3.8.*",
+        "phpunit/dbunit": ">=1.2"
     },
     "authors": [
         {
