--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "3.8.*",
-        "phpunit/dbunit": ">=1.2"
+        "phpunit/dbunit": ">=1.2",
+        "squizlabs/php_codesniffer": "1.5.*",
+        "phpmd/phpmd": "1.4.*"
     },
     "authors": [
         {
