--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "zendframework/zend-servicemanager": ">=2.2"
     },
     "require-dev": {
+        "zendframework/zendframework": ">= 2.2",
         "phpunit/phpunit": "3.8.*",
         "phpunit/dbunit": ">=1.2",
         "squizlabs/php_codesniffer": "1.5.*",
