--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     ],
     "autoload": {
         "psr-0": {
-            "SphinxSearch": "src/"
+            "SphinxSearch": "src/",
+            "SphinxSearchTests": "tests/"
         },
         "classmap": [
             "./Module.php"
