--- a/tests/test.config.php.dist
+++ b/tests/test.config.php.dist
@@ -1,5 +1,13 @@
 <?php
 return array(
+    'sphinxql' => array(
+            'host' => '127.0.0.1',
+            'port' => 9306,
+            'driver' => 'pdo_mysql',
+            'driver_options' => array(
+                PDO::MYSQL_ATTR_INIT_COMMAND => 'SET NAMES \'UTF8\''
+            )
+    ),
     'service_manager' => array(
         'abstract_factories' => array(
             'SphinxSearch\Db\Adapter\AdapterAbstractServiceFactory'
