--- a/tests/test.config.php.dist
+++ b/tests/test.config.php.dist
@@ -1,12 +1,16 @@
 <?php
 return array(
     'sphinxql' => array(
-            'host' => '127.0.0.1',
-            'port' => 9306,
-            'driver' => 'pdo_mysql',
-            'driver_options' => array(
-                PDO::MYSQL_ATTR_INIT_COMMAND => 'SET NAMES \'UTF8\''
+        'adapters' => array(
+            'sphinxql-1' => array(
+                'host' => '127.0.0.1',
+                'port' => 9306,
+                'driver' => 'pdo_mysql',
+                'driver_options' => array(
+                    PDO::MYSQL_ATTR_INIT_COMMAND => 'SET NAMES \'UTF8\''
+                )
             )
+        )
     ),
     'service_manager' => array(
         'abstract_factories' => array(
