Modified sphinx dummy configuration file

--- a/tests/sphinx.conf
+++ b/tests/sphinx.conf
@@ -18,6 +18,7 @@ index foo
     rt_field = short
     rt_field = text
     rt_attr_string = kind
+    rt_attr_uint = uid
 
     phrase_boundary = ., ?, !, U+2026
     blend_chars = +, &->+
