Added exception test for option method (Select)

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
     "keywords": [
         "zf2",
         "sphinx",
+        "sphinxql",
         "sphinx search",
         "search engine"
     ]
