--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
  - composer install
 
 script:
- - vendor/bin/phpunit -c tests
+ - vendor/bin/phpunit -c tests/
 
 notifications:
   email: false
