--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "3.8.*",
-        "phpunit/dbunit": "1.2.*",
-        "phpmd/phpmd": "1.4.*"
+        "phpmd/phpmd": "1.4.*",
+        "robertboloc/zf2-components-list-generator": "dev-master"
     },
     "authors": [
         {
