--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "3.8.*",
-        "phpmd/phpmd": "1.4.*",
-        "robertboloc/zf2-components-list-generator": "dev-master"
+        "phpmd/phpmd": "1.4.*"
     },
     "authors": [
         {
