- Improved test cases

--- a/tests/sphinx.conf
+++ b/tests/sphinx.conf
@@ -13,7 +13,47 @@ indexer
 index foo
 {
     type = rt
-    path = /tmp/foo
+    path = /tmp/sphinxsearch_test_foo
+    dict = keywords
+    rt_field = short
+    rt_field = text
+    rt_attr_string = bar
+    rt_attr_uint = baz
+    rt_attr_uint = bam
+    rt_attr_uint = c1
+    rt_attr_uint = c2
+    rt_attr_uint = c3
+
+    phrase_boundary = ., ?, !, U+2026
+    blend_chars = +, &->+
+    blend_mode = trim_none, skip_pure
+    charset_type = utf-8
+    charset_table = 0..9, A..Z->a..z, _, a..z, U+410..U+42F->U+430..U+44F, U+430..U+44F
+}
+
+index bar
+{
+    type = rt
+    path = /tmp/sphinxsearch_test_bar
+    dict = keywords
+    rt_field = short
+    rt_field = text
+    rt_attr_string = kind
+    rt_attr_uint = uid
+    rt_attr_uint = x
+    rt_attr_uint = y
+
+    phrase_boundary = ., ?, !, U+2026
+    blend_chars = +, &->+
+    blend_mode = trim_none, skip_pure
+    charset_type = utf-8
+    charset_table = 0..9, A..Z->a..z, _, a..z, U+410..U+42F->U+430..U+44F, U+430..U+44F
+}
+
+index baz
+{
+    type = rt
+    path = /tmp/sphinxsearch_test_baz
     dict = keywords
     rt_field = short
     rt_field = text
@@ -34,10 +74,10 @@ searchd
 {
     listen = 9312
     listen = 9306:mysql41
-    log	= /tmp/searchd.log
-    query_log = /tmp/query.log
-    binlog_path = /tmp
-    pid_file = /tmp/searchd.pid
+    log	= /tmp/sphinxsearch_test_searchd.log
+    query_log = /tmp/sphinxsearch_test_query.log
+    binlog_path = /tmp/
+    pid_file = /tmp/sphinxsearch_test_searchd.pid
     workers = threads
 }
 # --eof--
