Travis integration fix

--- a/tests/sphinx/sphinx.conf
+++ b/tests/sphinx/sphinx.conf
@@ -13,7 +13,7 @@ indexer
 index foo
 {
     type = rt
-    path = /tmp/sphinxsearch_test_foo
+    path = /var/lib/sphinx/foo
     dict = keywords
     rt_field = short
     rt_field = text
@@ -34,7 +34,7 @@ index foo
 index bar
 {
     type = rt
-    path = /tmp/sphinxsearch_test_bar
+    path = /var/lib/sphinx/bar
     dict = keywords
     rt_field = short
     rt_field = text
@@ -53,7 +53,7 @@ index bar
 index baz
 {
     type = rt
-    path = /tmp/sphinxsearch_test_baz
+    path = /var/lib/sphinx/baz
     dict = keywords
     rt_field = short
     rt_field = text
@@ -74,10 +74,10 @@ searchd
 {
     listen = 9312
     listen = 9306:mysql41
-    log	= /tmp/sphinxsearch_test_searchd.log
-    query_log = /tmp/sphinxsearch_test_query.log
-    binlog_path = /tmp/
-    pid_file = /tmp/sphinxsearch_test_searchd.pid
+    log	= /var/log/sphinx/searchd.log
+    query_log = /var/log/sphinx/query.log
+    binlog_path = /var/lib/sphinx
+    pid_file = /var/run/sphinx/searchd.pid
     workers = threads
 }
 # --eof--
