--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,12 @@ php:
   - 5.4
   - 5.5
 
+install:
+  - composer self-update && composer --version
+  - composer install
+
 before_script:
- - curl -s http://getcomposer.org/installer | php
- - php composer.phar install
- - wget http://sphinxsearch.com/files/sphinx-2.2.1-beta.tar.gz
- - tar xzvf sphinx-2.2.1-beta.tar.gz
- - cd sphinx-2.2.1-beta/
- - ./configure
- - make && make install
- - cd $PWD
- - SPHINX=`which searchd`
- - $SPHINX -c tests/sphinx.conf
+  - tests/travis/sphinx-setup.sh
 
 script:
  - vendor/bin/phpunit -c tests/
