--- a/tests/sphinx/sphinx.conf
+++ b/tests/sphinx/sphinx.conf
@@ -23,6 +23,7 @@ index foo
     rt_attr_uint = c1
     rt_attr_uint = c2
     rt_attr_uint = c3
+    rt_attr_float = f1
 
     phrase_boundary = ., ?, !, U+2026
     blend_chars = +, &->+
@@ -72,8 +73,8 @@ index baz
 #############################################################################
 searchd
 {
-    listen = 9312
-    listen = 9306:mysql41
+    listen = localhost:9312
+    listen = localhost:9306:mysql41
     log	= /var/log/sphinx/searchd.log
     query_log = /var/log/sphinx/query.log
     binlog_path = /var/lib/sphinx
