Prepared for packaging

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "ripaclub/sphinxsearch",
     "description": "Sphinx Search library provides SphinxQL indexing and searching features",
+    "homepage": "https://github.com/ripaclub/sphinxsearch",
     "license": "BSD-2-Clause",
     "minimum-stability": "dev",
     "require": {
