--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,9 @@
             "./"
         ]
     },
+    "suggest": {
+        "ripaclub/zf2-sphinxsearch": "ZF2 integration module for SphinxSearch library"
+    },
     "keywords": [
         "sphinx",
         "sphinxql",
