--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ php:
   - 5.4
   - 5.5
 
+branches:
+  only:
+    - master
+
 install:
   - composer self-update && composer --version
   - composer install --dev --prefer-source
