--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
 
 script:
  - vendor/bin/phpunit -c tests/
+ - vendor/bin/phpunit -c tests/ --group=integration
 
 notifications:
   email: false
