--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "3.8.*",
-        "phpmd/phpmd": "1.4.*"
+        "phpmd/phpmd": "1.4.*",
+        "satooshi/php-coveralls": "dev-master"
     },
     "authors": [
         {
