--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "3.8.*",
-        "phpmd/phpmd": "1.4.*",
+        "phpmd/phpmd": "1.5.*",
+        "pdepend/pdepend": "1.1.*",
+        "squizlabs/php_codesniffer": "1.5.*",
         "satooshi/php-coveralls": "dev-master"
     },
     "authors": [
