--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,11 +1,13 @@
+filter:
+    paths: [library/*]
+    excluded_paths: [vendor/*, tests/*, docs/*]
+
 before_commands:
     - "composer self-update && composer --version"
     - "composer install --dev --prefer-source"
 
 tools:
-    php_code_coverage:
-        enabled: true
-        test_command: vendor/bin/phpunit -c tests/
+    external_code_coverage: true
     php_code_sniffer:
         enabled: true
         command: vendor/bin/phpcs
@@ -15,16 +17,17 @@ tools:
             paths: ["library/*"]
     php_cpd:
         enabled: true
-        excluded_dirs: ["build/*", "docs", "examples", "tests", "vendor"]
+        command: vendor/bin/phpcpd
+        excluded_dirs: ["docs", "tests", "vendor"]
     php_cs_fixer:
         enabled: true
         config:
             level: all
         filter:
-            paths: ["library/*", "tests/*"]
+            paths: ["library/*"]
     php_loc:
         enabled: true
-        excluded_dirs: ["build", "docs", "examples", "tests", "vendor"]
+        excluded_dirs: ["docs", "tests", "vendor"]
     php_mess_detector:
         enabled: true
         command: vendor/bin/phpmd
@@ -34,9 +37,10 @@ tools:
             paths: ["library/*"]
     php_pdepend:
         enabled: true
-        excluded_dirs: ["build", "docs", "examples", "tests", "vendor"]
-    php_analyzer: true
+        command: vendor/bin/pdepend
+        excluded_dirs: ["docs", "tests", "vendor"]
     php_analyzer:
+        enabled: true
         filter:
-            paths: ["library/*", "tests/*", "examples/*"]
+            paths: ["library/*"]
     sensiolabs_security_checker: true
