--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "phpmd/phpmd": "1.5.*",
         "pdepend/pdepend": "1.1.*",
         "squizlabs/php_codesniffer": "1.5.*",
+        "sebastian/phpcpd": "2.0.*",
         "satooshi/php-coveralls": "dev-master"
     },
     "authors": [
