--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
 after_script:
  - vendor/bin/coveralls -v
  - wget https://scrutinizer-ci.com/ocular.phar
- - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
+ - php ocular.phar code-coverage:upload --format=php-clover tests/build/logs/clover.xml
 
 notifications:
   email: false
