--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zend-db": "2.2.*",
-        "zendframework/zend-servicemanager": "2.2.*"
+        "zendframework/zend-db": ">=2.2.0",
+        "zendframework/zend-servicemanager": ">=2.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "3.8.*",
