--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,11 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zend-db": ">=2.2.0",
-        "zendframework/zend-servicemanager": ">=2.2.0"
+        "zendframework/zend-db": ">=2.2",
+        "zendframework/zend-servicemanager": ">=2.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.8.*",
+        "phpunit/phpunit": ">=4.0",
         "phpmd/phpmd": "1.5.*",
         "pdepend/pdepend": "1.1.*",
         "squizlabs/php_codesniffer": "1.5.*",
