--- a/tests/sphinx/sphinx.conf
+++ b/tests/sphinx/sphinx.conf
@@ -73,8 +73,8 @@ index baz
 #############################################################################
 searchd
 {
-    listen = localhost:9312
-    listen = localhost:9306:mysql41
+    listen = 127.0.0.1:9312
+    listen = 127.0.0.1:9306:mysql41
     log	= /var/log/sphinx/searchd.log
     query_log = /var/log/sphinx/query.log
     binlog_path = /var/lib/sphinx
