Author name updated (composer.json)

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "authors": [
         {
-            "name": "Leonardo Di Donato",
+            "name": "Leo Di Donato",
             "email": "leodidonato@gmail.com"
         },
         {
