--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,4 +1,4 @@
 src_dir         : library
 service_name    : travis-ci
-coverage_clover : tests/build/logs/clover.xml
-json_path       : tests/build/logs/coveralls-upload.json
+coverage_clover : build/logs/clover.xml
+json_path       : build/logs/coveralls-upload.json
