--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ php:
 branches:
   only:
     - master
+    - develop
 
 install:
   - composer self-update && composer --version
@@ -17,12 +18,12 @@ before_script:
   - tests/travis/sphinx-setup.sh
 
 script:
- - vendor/bin/phpunit
+  - vendor/bin/phpunit
 
 after_script:
- - vendor/bin/coveralls -v
- - wget https://scrutinizer-ci.com/ocular.phar
- - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
+  - vendor/bin/coveralls
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
 
 notifications:
   email: false
