--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         "zendframework/zend-servicemanager": ">=2.2"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=4.0",
-        "phpmd/phpmd": "1.5.*",
-        "pdepend/pdepend": "1.1.*",
+        "phpunit/phpunit": "4.0.*",
+        "phpmd/phpmd": "2.0.*",
+        "satooshi/php-coveralls": "0.6.*",
+        "pdepend/pdepend": "2.0.*",
         "squizlabs/php_codesniffer": "1.5.*",
-        "fabpot/php-cs-fixer": "*",
-        "satooshi/php-coveralls": "dev-master"
+        "fabpot/php-cs-fixer": "0.5.*"
     },
     "authors": [
         {
