--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "phpmd/phpmd": "2.0.*",
         "satooshi/php-coveralls": "0.6.*",
         "pdepend/pdepend": "2.0.*",
-        "squizlabs/php_codesniffer": "1.5.*",
-        "fabpot/php-cs-fixer": "0.5.*"
+        "squizlabs/php_codesniffer": "1.5.*"
     },
     "authors": [
         {
