--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,13 @@
     "description": "Sphinx Search library provides SphinxQL indexing and searching features",
     "homepage": "https://github.com/ripaclub/sphinxsearch",
     "license": "BSD-2-Clause",
-    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zend-db": ">=2.2",
-        "zendframework/zend-servicemanager": ">=2.2"
+        "zendframework/zend-db": "2.2.*",
+        "zendframework/zend-servicemanager": "2.2.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.0.*",
+        "phpunit/phpunit": "4.2.*",
         "phpmd/phpmd": "2.0.*",
         "pdepend/pdepend": "2.0.*",
         "squizlabs/php_codesniffer": "1.5.*"
