--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
     "license": "BSD-2-Clause",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zend-db": "2.2.*",
-        "zendframework/zend-servicemanager": "2.2.*"
+        "zendframework/zend-db": "~2.2",
+        "zendframework/zend-servicemanager": "~2.2",
+        "zendframework/zend-stdlib": "~2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "4.2.*",
