--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,6 +7,9 @@
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">library</directory>
+            <exclude>
+            	<directory suffix=".php">library/Db/Sql/compatibility</directory>
+            </exclude>
         </whitelist>
     </filter>
     <logging>
