--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: php
 
 php:
-  - 5.3.23
+  - 5.3.3
   - 5.4
   - 5.5
+  - 5.6
+  - 7
+  - hhvm
+  - hhvm-nightly
 
 branches:
   only:
@@ -26,3 +30,10 @@ after_script:
 
 notifications:
   email: false
+
+  matrix:
+  fast_finish: true
+  allow_failures:
+    - php: 7
+    - php: hhvm
+    - php: hhvm-nightly
