--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,14 @@ install:
   - composer install --dev
 
 before_script:
+  - mkdir -p build/coverage
   - tests/travis/sphinx-setup.sh
 
 script:
   - vendor/bin/phpunit
 
 after_script:
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
+  - php vendor/bin/coveralls
 
 notifications:
   email: false
