--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ branches:
     - develop
 
 install:
-  - composer self-update && composer --version
+  - composer self-update
   - composer install --dev
 
 before_script:
