--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
     "license": "BSD-2-Clause",
     "require": {
         "php": ">=5.5",
-        "zendframework/zend-db": "~2.4",
-        "zendframework/zend-servicemanager": "~2.4"
+        "container-interop/container-interop": "~1.0",
+        "zendframework/zend-db": "^2.4 || ^3.0",
+        "zendframework/zend-servicemanager": "^2.4 || ^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.3",
